<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/profilebkg_cyan"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layoutDisconnected"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="100dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/doggy_disconnected" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="Look! I found a cable"
            android:textAllCaps="true"
            android:gravity="center"
            android:textColor="@color/tulip"
            android:textSize="30dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="40dp"
            android:textSize="20dp"
            android:gravity="center"
            android:textColor="@color/light_cyan"
            android:text="@string/about_disconnect"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layoutConnected"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="111dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/doggy_connected" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="It worked!"
            android:textAllCaps="true"
            android:gravity="center"
            android:textColor="@color/tulip"
            android:textSize="30dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:textSize="20dp"
            android:textColor="@color/light_cyan"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:text="@string/about_connected"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:textSize="16dp"
            android:textColor="@color/light_cyan"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:text="Well, I will try..."/>


    </LinearLayout>


</FrameLayout>